--- a/app/style.css
+++ b/app/style.css
@@ -6,6 +6,11 @@ h1 { font-family: "Droid Sans Mono"; font-size: 24px; font-style: normal; font-v
     --padding: 5px;
 }
 
+html, body {
+    width: 100%;
+    height: 100%;
+}
+
 body {
     margin: 0;
     padding: 0;
@@ -49,10 +54,13 @@ pre {
     background: #222;
     color: white;
     display: flex;
+    height: 80%;
+    overflow-y: hidden;
 }
 
 .Instructions {
     width: 80%;
+    overflow-y: auto;
 }
 
 .Instructions h1 {
@@ -60,6 +68,7 @@ pre {
 }
 
 .Memory {
+    overflow-y: auto;
     border-left: 1px solid white;
     width: 20%;
 }
@@ -74,6 +83,8 @@ pre {
 }
 
 .CodeLine .CodeLine-number {
+    text-decoration: none !important;
+    color: white !important;
     background: #447;
     padding: 0 var(--padding);
     width: 30px;
@@ -90,4 +101,21 @@ pre {
 
 .CodeLine .CodeLine-line:hover {
     background: #474;
+}
+
+.code-builtin {
+    color: #bbf;
+}
+
+.code-function {
+    color: #aaf;
+}
+
+.Footer {
+    height: 20%;
+    background: #222;
+}
+
+.Footer .Footer-output {
+    padding: var(--padding);
 }
